# shift_scheduling_agent

./: .dockerignore  .env  .env.example  .env.tstxe  .env.uatxe  .gitignore  README.md  apitest.py  compose.yaml  langchain_test.py  langgraph.json  openapi-python-client.yaml  ortools_demo.py  pyproject.toml  security_test_client.py  swagger2openapi.dockerfile  test.py
agent/: config.py  implementation.py  prompts.py  questions_to_api.txt  shift_scheduling_tools.py  spec.yml  state.py  stub.py  utils.py
agent/cp_sat_model/: constraints.py  group_solver.py  optimizations.py  shift.py  solution_output.py  solver_manager.py  worker.py
hrm/webapi/unified/: env.py  response.py  urlutils.py
hrm/webapi/unified/calendars/departments/: departments.py  scheduledrecords.py
hrm/webapi/unified/employees/: employees.py
hrm/webapi/unified/employeeschedulingrulesettings/: shifts.py
hrm/webapi/unified/groups/customs/: employees.py  groups.py
hrm/webapi/unified/groups/customs/shift_schedule_sections/: requieements.py
hrm/webapi/unified/holidays/employees/: remaining.py
hrm/webapi/unified/salaries/: employees.py
hrm/webapi/unified/scheduledrecords/: departments.py
hrm/webapi/unified/shifts/: shifts.py
hrm/webapi/unified/shiftschedule/: cycles.py  shiftschedule.py
local_data/: day_off_requests.json  shifts_MAY.json  staff_requirement.json  workers_MAY.json
models/: group_requirement_info.py  shift.py  worker.py
security/: auth.py
webapi/: webapp.py
