[project]
name = "shift-scheduling-agent"
version = "0.1.0"
description = "A Mayo agent to help you to schedule shifts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-anthropic>=0.3.12",
    "langchain-openai>=0.3.14",
    "langgraph>=0.3.34",
    "langgraph-cli[inmem]>=0.2.5",
    "langgraph-gen>=0.0.6",
    "langgraph-sdk>=0.1.63",
    "ortools>=9.12.4544",
    "typing-extensions>=4.13.2",
    "fastapi>=0.115.12",
    "async-lru>=2.0.5",
    "attrs>=22.2.0",
    "tabulate>=0.9.0",
]


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]

